[package]
name = "gha-toolkit"
version = "0.3.1"
edition = "2021"
description = "GitHub Actions toolkit for Rust"
license = "MIT"
homepage = "https://github.com/BitskiCo/gha-toolkit"
repository = "https://github.com/BitskiCo/gha-toolkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.1"
bytes = "1"
futures = "0.3"
hex = "0.4"
http = "0.2"
hyperx = { version = "1", features = ["headers"] }
md-5 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1.2"
reqwest-retry-after = "0.1"
reqwest-tracing = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10"
shell-escape = "0.1"
thiserror = "1.0.7"
tracing = "0.1"
url = "2"

[dev-dependencies]
anyhow = "1.0.66"
tokio = { version = "1.22.0", features = ["macros"] }
